[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rotalabs-graph"
version = "0.0.1"
description = "GNN-based trust propagation for entity trust networks"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Rotalabs", email = "research@rotalabs.ai" }
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["ai", "graph", "gnn", "trust", "networks"]

[project.urls]
Homepage = "https://rotalabs.ai"
Repository = "https://github.com/rotalabs/rotalabs-graph"
