[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rotalabs-graph"
version = "1.0.0"
description = "GNN-based trust propagation for AI systems"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.9"
authors = [
    { name = "Subhadip Mitra", email = "subhadip@rotalabs.ai" },
    { name = "Rotalabs Research", email = "research@rotalabs.ai" },
]
keywords = [
    "trust",
    "graph",
    "gnn",
    "ai-safety",
    "trust-propagation",
    "network-analysis",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0.0",
    "networkx>=3.0",
]

[project.optional-dependencies]
gnn = [
    "torch>=2.0",
    "torch-geometric>=2.0",
]
viz = [
    "matplotlib>=3.5",
    "plotly>=5.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
]
all = [
    "rotalabs-graph[gnn,viz,dev,docs]",
]

[project.urls]
Homepage = "https://github.com/rotalabs/rotalabs-graph"
Documentation = "https://rotalabs.github.io/rotalabs-graph"
Repository = "https://github.com/rotalabs/rotalabs-graph"
Issues = "https://github.com/rotalabs/rotalabs-graph/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/rotalabs_graph"]

[tool.ruff]
target-version = "py39"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without strict parameter
]

[tool.ruff.lint.isort]
known-first-party = ["rotalabs_graph"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "-ra",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "networkx.*",
    "torch.*",
    "torch_geometric.*",
    "matplotlib.*",
    "plotly.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/rotalabs_graph"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
